--- a/index.html
+++ b/index.html
@@ -35,24 +35,75 @@
         </div>
 
         <div class="home-content">
-        <h3>Hi</h3>
-        <h1>It's <span>Mateus</span></h1>  
-        <h3 class="text-animation">  
-        I'm a <span></span>
-        </h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non veritatis exercitationem a! Praesentium fugiat doloremque itaque, vitae inventore obcaecati ipsam et sed reiciendis aspernatur, ut perspiciatis. Similique voluptatibus quo nulla? </p>
+            <h3>Hi</h3>
+            <h1>It's <span>Mateus</span></h1>  
+            <h3 class="text-animation">  
+            I'm a <span></span>
+            </h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non veritatis exercitationem a! Praesentium fugiat doloremque itaque, vitae inventore obcaecati ipsam et sed reiciendis aspernatur, ut perspiciatis. Similique voluptatibus quo nulla? </p>
 
-        <div class="socials-icons">
-            <i class='bx bxl-linkedin-square' ></i>
-            <i class='bx bxl-facebook-circle' ></i>
-            <i class='bx bxl-instagram-alt' ></i>
-        </div>
+            <div class="social-icons">
+                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="#"> <i class='bx bxl-facebook-circle' ></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            </div>
 
-        <a href="#" class="btn">HIRE</a>
+            <a href="#" class="btn">HIRE</a>
         </div>
     </section>
 
+    <section class="Services" id="Services">
+        <h2 class="heading">Services</h2>
+        <div class="service-container"></div>
+            <div class="services-box">
+                <i class='bx bx-code'></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae a, ex asperiores qui hic sapiente nemo praesentium error fugit quia voluptate repellat alias quod quis labore, saepe accusamus aperiam mollitia?</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bx-code-curly' ></i>
+                <h3>Frontend Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae a, ex asperiores qui hic sapiente nemo praesentium error fugit quia voluptate repellat alias quod quis labore, saepe accusamus aperiam mollitia?</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+    </section>
 
+    <section class="Projects" id="Projects">
+        <h2 class="heading">Projects</h2>
+
+        <div class="projects-container">
+
+            <div class="projects-box">
+                <img src="assets/img1.jpg" alt="">
+                <div class="projects-info">
+                    <h4>Web Development</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint soluta corrupti praesentium obcaecati eaque nihil earum omnis, tenetur cumque. Minima sapiente in omnis distinctio, quam eum dicta quaerat perferendis sint.</p>
+                    <a href="#"><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+
+            <div class="projects-box">
+                <img src="assets/img1.jpg" alt="">
+                <div class="projects-info">
+                    <h4>Web Development</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint soluta corrupti praesentium obcaecati eaque nihil earum omnis, tenetur cumque. Minima sapiente in omnis distinctio, quam eum dicta quaerat perferendis sint.</p>
+                    <a href="#"><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+
+            <div class="projects-box">
+                <img src="assets/img1.jpg" alt="">
+                <div class="projects-info">
+                    <h4>Web Development</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint soluta corrupti praesentium obcaecati eaque nihil earum omnis, tenetur cumque. Minima sapiente in omnis distinctio, quam eum dicta quaerat perferendis sint.</p>
+                    <a href="#"><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+            
+
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
