--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#services">Services</a>
-            <a href="#projects">Projects</a>
-            <a href="#skills">Skills</a>
-            <a href="#education">Education</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="services.html">Services</a>
+            <a href="projects.html">Projects</a>
+            <a href="skills.html">Skills</a>
+            <a href="education.html">Education</a>
+            <a href="contact.html">Contact</a>
         </nav>
 
 
@@ -35,76 +35,22 @@
         </div>
 
         <div class="home-content">
-            <h3>Hi</h3>
-            <h1>It's <span>Mateus</span></h1>  
+            <h3>Olá</h3>
+            <h1>Eu sou<span> Mateus</span></h1>  
             <h3 class="text-animation">  
-            I'm a <span></span>
+            Sou um Developer<span></span>
             </h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non veritatis exercitationem a! Praesentium fugiat doloremque itaque, vitae inventore obcaecati ipsam et sed reiciendis aspernatur, ut perspiciatis. Similique voluptatibus quo nulla? </p>
+            <p> Estudante de Tecnologia em Sistemas da Informação na UNINTER, estou me especializando em Cybersecurity, um campo que me fascina e onde tenho a certificação da DIO. Meu objetivo é aplicar esse conhecimento para fortalecer a segurança digital e contribuir com soluções inovadoras, sempre em sintonia com as tendências do mercado. </p>
 
             <div class="social-icons">
-                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
-                <a href="#"> <i class='bx bxl-facebook-circle' ></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://www.linkedin.com/in/mateus-souza-870627246/"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="https://www.facebook.com/mateus.souza.3958914/"> <i class='bx bxl-facebook-circle' ></i></a>
+                <a href="https://www.instagram.com/_matt_souza/"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
 
             <a href="#" class="btn">HIRE</a>
         </div>
     </section>
-
-    <section class="Services" id="Services">
-        <h2 class="heading">Services</h2>
-        <div class="service-container"></div>
-            <div class="services-box">
-                <i class='bx bx-code'></i>
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae a, ex asperiores qui hic sapiente nemo praesentium error fugit quia voluptate repellat alias quod quis labore, saepe accusamus aperiam mollitia?</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bx-code-curly' ></i>
-                <h3>Frontend Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae a, ex asperiores qui hic sapiente nemo praesentium error fugit quia voluptate repellat alias quod quis labore, saepe accusamus aperiam mollitia?</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-    </section>
-
-    <section class="Projects" id="Projects">
-        <h2 class="heading">Projects</h2>
-
-        <div class="projects-container">
-
-            <div class="projects-box">
-                <img src="assets/img1.jpg" alt="">
-                <div class="projects-info">
-                    <h4>Web Development</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint soluta corrupti praesentium obcaecati eaque nihil earum omnis, tenetur cumque. Minima sapiente in omnis distinctio, quam eum dicta quaerat perferendis sint.</p>
-                    <a href="#"><i class="bx bx-link"></i></a>
-                </div>
-            </div>
-
-            <div class="projects-box">
-                <img src="assets/img1.jpg" alt="">
-                <div class="projects-info">
-                    <h4>Web Development</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint soluta corrupti praesentium obcaecati eaque nihil earum omnis, tenetur cumque. Minima sapiente in omnis distinctio, quam eum dicta quaerat perferendis sint.</p>
-                    <a href="#"><i class="bx bx-link"></i></a>
-                </div>
-            </div>
-
-            <div class="projects-box">
-                <img src="assets/img1.jpg" alt="">
-                <div class="projects-info">
-                    <h4>Web Development</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint soluta corrupti praesentium obcaecati eaque nihil earum omnis, tenetur cumque. Minima sapiente in omnis distinctio, quam eum dicta quaerat perferendis sint.</p>
-                    <a href="#"><i class="bx bx-link"></i></a>
-                </div>
-            </div>
-            
-
-        </div>
-    </section>
-
     <script src="script.js"></script>
 </body>
 </html>
